# packpath

./: .flake8  .gitignore  AUTHORS  README.md  requirements.txt  setup.cfg
.github/workflows/: testpypi-publish.yml
packpath/: __init__.py  __main__.py  test.py
