[metadata]
name = packpath
version = attr: packpath.__version__
description = Automatically upload Signal stickers from a given path and YAML configuration
license = AGPL-3.0-only
author = Diego Escalante Urrelo
author_email = diegoe@gnome.org

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3.9
    Programming Language :: Python
    Topic :: Communications :: Chat
    Topic :: Utilities

url = https://github.com/diegoe/packpath
project_urls =
    GitHub = https://github.com/diegoe/packpath

[options]
include_package_data = True
packages= find:
install_requires =
    signalstickers-client>=3.1.0
    PyYAML>=5.4.1

[options.entry_points]
console_scripts =
    packpath = packpath.__main__:main

[flake8]
max-line-length = 119
ignore =
    E501
extend-exclude =
    build
    dist
    *.egg-info
    venv
